Uredjenje home stranice

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,7 +23,7 @@
     font-size: 90px;
     height: 60px;
     font-weight: 50;
-    color: black;
+    color: rgb(245, 241, 241);
   }
   
   .headerContainer p {
